--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -600,7 +600,11 @@ body {
                 position: relative;
 
                 img {
-                  width: 100%;
+                  height: 96px;
+                  width: 96px;
+                  position: absolute;
+                  top: 0;
+                  left: 0;
                 }
 
                 .change-profile-pic {
