--- a/application/modules/default/views/scripts/dl/index.phtml
+++ b/application/modules/default/views/scripts/dl/index.phtml
@@ -24,29 +24,49 @@
 <html>
 <head>
     <title>Download/Install</title>
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="captcha.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script>
+        var total;
+
+        function getRandom(){return Math.ceil(Math.random()* 20);}
+        function createSum(){
+                        var randomNum1 = getRandom(),
+                                randomNum2 = getRandom();
+                total =randomNum1 + randomNum2;
+          $( "#question" ).text( randomNum1 + " + " + randomNum2 + "=" );  
+          $("#ans").val('');
+          checkInput();
+        }
+
+        function checkInput(){
+                        var input = $("#ans").val(), 
+                slideSpeed = 200,
+              hasInput = !!input, 
+              valid = hasInput && input == total;
+            $('#message').toggle(!hasInput);
+            $('button[type=submit]').prop('disabled', !valid);  
+            $('#success').toggle(valid);
+            $('#fail').toggle(hasInput && !valid);
+        }
+
+        $(document).ready(function(){
+                //create initial sum
+                createSum();
+                // On "reset button" click, generate new random sum
+                $('button[type=reset]').click(createSum);
+                // On user input, check value
+                $( "#ans" ).keyup(checkInput);
+        });
+    </script>
+    
 </head>
 <body>
     <main id="ads-page">   
         <center>
             <div style="height: 500px; width: 400px">            
-                <?php
-                
-                $errors = array();
-
-                if ($_SERVER['REQUEST_METHOD'] == 'POST') { 
-
-                    if (empty($errors) === true) {
-
-                        if (empty($_POST['captcha_entered'])) {
-                            $errors[] = '<p class = "input-error">Please answer the Captcha Question</p>';
-                        } elseif ($_REQUEST['captcha_entered']!=$_SESSION['rand_code']) {
-                            $errors[] = '<p class = "input-error">Your answer to the Math Question is incorrect.</p>';
-                        }
-                    }   
-                }
-                ?>
-
                 <div class="">
                     <div class="" style="margin-top:0px;margin-bottom:15px;">
                         
@@ -58,21 +78,20 @@
 
                                 echo '<script>document.location.href = "'.$this->url.'";</script>';
 
-                            } else if (empty($errors) === false) {
-
-                                echo output_errors($errors);
                             }
                             ?>
-                             <p>
-                                <img src="captcha.php" />
-                                <input name="captcha_entered" style = "width: 100px !important;" type="text" id="captcha_entered" size="5" maxlength="2" placeholder = "Answer" />
-                                <input type="hidden" name="captcha_total" id="captcha_total" value="<?php echo $_SESSION['rand_code']; ?>" />
-                            </p>
+                                
+                            <p id="question"></p><input id="ans" type="text">
+                            <div id="message">Please verify.</div>
+                            <div id="success">Validation complete :)</div>
+                            <div id="fail">Validation failed :(</div>			
+                                
                              <?php if($this->link_type == 'download') { ?>
                              <input type="submit" value="Start Download">
                              <?php } else { ?>
                              <input type="submit" value="Start Installation">
                              <?php } ?>
+                             <button type="reset" value="reset">Reset</button>
                             </form>   
                         </div>  
                     </div>
