--- a/application/modules/default/views/scripts/dl/index.phtml
+++ b/application/modules/default/views/scripts/dl/index.phtml
@@ -87,9 +87,9 @@
                             <div id="fail">Validation failed :(</div>			
                                 
                              <?php if($this->link_type == 'download') { ?>
-                             <input type="submit" value="Start Download">
+                             <button type="submit" value="Start Download">
                              <?php } else { ?>
-                             <input type="submit" value="Start Installation">
+                             <button type="submit" value="Start Installation">
                              <?php } ?>
                              <button type="reset" value="reset">Reset</button>
                             </form>   
