--- a/application/modules/default/views/scripts/dl/index.phtml
+++ b/application/modules/default/views/scripts/dl/index.phtml
@@ -61,6 +61,78 @@
                 $( "#ans" ).keyup(checkInput);
         });
     </script>
+    <style>
+        
+        *{
+                padding: 0;
+                margin: 0;
+        }
+
+        html, body{
+                font-family: 'Open Sans';
+                font-weight: lighter;
+                font-size: 12px;
+                width: 100%;
+                height: 100%;
+        }
+
+        #success, #fail{
+                display: none;
+
+        }
+
+        #message, #success, #fail{
+                margin-top: 10px;
+                margin-bottom: 10px;
+        }
+
+        .container{
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+        }
+
+        p{
+                display: inline;
+                margin-right: 5px;
+        }
+
+        input, button{
+                font-family: 'Open Sans';
+                font-weight: lighter;
+                font-size: 12px;
+        }
+
+        input{
+                border: 1px solid #000000;
+                width: 30px;
+                height: 20px;
+                text-align: center;
+        }
+
+        button{
+                border: none;
+            border-radius: 1.5em;
+            color: #FFF;
+            background: #000000;
+            padding: 2.5px 10px;
+            width: 75px;
+            height: 30px;
+            cursor: pointer;
+            transition: background .5s ease-in-out;
+        }
+
+        button:hover:enabled{
+                background: #303030;
+        }
+
+        button:disabled{
+                opacity: .5;
+                cursor: default;
+        }
+        
+    </style>
     
 </head>
 <body>
@@ -74,17 +146,18 @@
                             
                             <form id="Form1" name="Form1" action="" method="POST">
                             <?php
-                            if (empty($_POST) === false && empty($errors) === true) {
+                            if (empty($_POST) === false) {
 
                                 echo '<script>document.location.href = "'.$this->url.'";</script>';
 
-                            }
+                            } else {
                             ?>
                                 
                             <p id="question"></p><input id="ans" type="text">
                             <div id="message">Please verify.</div>
-                            <div id="success">Validation complete :)</div>
-                            <div id="fail">Validation failed :(</div>			
+                            <div id="success">Validation complete</div>
+                            <div id="fail">Validation failed</div>
+                            
                                 
                              <?php if($this->link_type == 'download') { ?>
                              <button type="submit" value="Start Download">Start Download</button>
@@ -92,6 +165,11 @@
                              <button type="submit" value="Start Installation">Start Installation</button>
                              <?php } ?>
                              <button type="reset" value="reset">Reset</button>
+                             
+                             <?php
+                            }
+                             ?>
+                             
                             </form>   
                         </div>  
                     </div>
