--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -397,8 +397,9 @@ out: ../css/header.css, sourcemap: true, compress: true
 
         .menu-item {
           display: block;
-          padding: 0 5px;
           height: 30px;
+          width: 30px;
+          position: relative;
           line-height: 30px;
           float: left;
           color: white;
@@ -408,6 +409,10 @@ out: ../css/header.css, sourcemap: true, compress: true
 
           > span {
             color: white;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin: -6px 0 0 -7px;
           }
         }
 
