--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -394,6 +394,7 @@ out: ../css/header.css, sourcemap: true, compress: true
         height: 40px;
         padding: 5px;
         float: right;
+        padding-right: 3px;
 
         .menu-item {
           display: block;
