--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -366,18 +366,6 @@ body {
           margin: 0 5px;
           margin-top: 2px;
         }
-
-        &#userLoginDropdown {
-          width: 26px;
-          height: 25px;
-          position: relative;
-
-          img {
-            position: absolute;
-            top: 0;
-            left: 0;
-          }
-        }
       }
 
       .dropdown-menu {
@@ -600,11 +588,7 @@ body {
                 position: relative;
 
                 img {
-                  height: 96px;
-                  width: 96px;
-                  position: absolute;
-                  top: 0;
-                  left: 0;
+                  width: 100%;
                 }
 
                 .change-profile-pic {
@@ -673,7 +657,7 @@ body {
               width: auto;
               display: block;
               border-radius: 2px;
-              padding: 6px 16px !important;
+              padding: 0 16px;
               font-size: 12px;
               height: 30px;
               font-weight: normal;
@@ -682,7 +666,6 @@ body {
               border: 1px solid #c6c6c6;
               float: left;
               clear: none;
-              line-height: 12px !important;
 
               &.pull-right {
                 float: right;
@@ -700,11 +683,6 @@ body {
                 background-image: linear-gradient(top,#fff,#f8f8f8);
               }
 
-              span {
-                display: block;
-                float: left;
-                height: 12px;
-              }
             }
           }
         }
