--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -366,6 +366,18 @@ body {
           margin: 0 5px;
           margin-top: 2px;
         }
+
+        &#userLoginDropdown {
+          width: 26px;
+          height: 25px;
+          position: relative;
+
+          img {
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+        }
       }
 
       .dropdown-menu {
@@ -588,7 +600,11 @@ body {
                 position: relative;
 
                 img {
-                  width: 100%;
+                  height: 96px;
+                  width: 96px;
+                  position: absolute;
+                  top: 0;
+                  left: 0;
                 }
 
                 .change-profile-pic {
@@ -657,7 +673,7 @@ body {
               width: auto;
               display: block;
               border-radius: 2px;
-              padding: 0 16px;
+              padding: 6px 16px !important;
               font-size: 12px;
               height: 30px;
               font-weight: normal;
@@ -666,6 +682,7 @@ body {
               border: 1px solid #c6c6c6;
               float: left;
               clear: none;
+              line-height: 12px !important;
 
               &.pull-right {
                 float: right;
@@ -683,6 +700,11 @@ body {
                 background-image: linear-gradient(top,#fff,#f8f8f8);
               }
 
+              span {
+                display: block;
+                float: left;
+                height: 12px;
+              }
             }
           }
         }
