--- a/application/modules/default/views/scripts/dl/index.phtml
+++ b/application/modules/default/views/scripts/dl/index.phtml
@@ -144,7 +144,7 @@
                     <div class="" style="margin-top:0px;margin-bottom:15px;">
                         
                         <div class="" style="width:90%">
-                            <h3>Please consider to become a <a href="/support">supporter</a> to help the site grow.</h3>
+                            <h3>Please consider to become a <a href="/support" target="_TOP">supporter</a> to help the site grow.</h3>
                             <br/><br/>
                             <?php
                             if ($_SERVER['REQUEST_METHOD'] == 'POST') { 
