--- a/application/modules/default/views/scripts/dl/index.phtml
+++ b/application/modules/default/views/scripts/dl/index.phtml
@@ -63,78 +63,6 @@
         });
         */
     </script>
-    <style>
-        
-        *{
-                padding: 0;
-                margin: 0;
-        }
-
-        html, body{
-                font-family: 'Open Sans';
-                font-weight: lighter;
-                font-size: 12px;
-                width: 100%;
-                height: 100%;
-        }
-
-        #success, #fail{
-                display: none;
-
-        }
-
-        #message, #success, #fail{
-                margin-top: 10px;
-                margin-bottom: 10px;
-        }
-
-        .container{
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-        }
-
-        p{
-                display: inline;
-                margin-right: 5px;
-        }
-
-        input, button{
-                font-family: 'Open Sans';
-                font-weight: lighter;
-                font-size: 12px;
-        }
-
-        input{
-                border: 1px solid #000000;
-                width: 30px;
-                height: 20px;
-                text-align: center;
-        }
-
-        button{
-                border: none;
-            border-radius: 0.3em;
-            color: #FFF;
-            background: #000000;
-            padding: 2.5px 10px;
-            height: 30px;
-            cursor: pointer;
-            transition: background .5s ease-in-out;
-        }
-
-        button:hover:enabled{
-                background: #303030;
-        }
-
-        button:disabled{
-                opacity: .5;
-                cursor: default;
-        }
-        
-    </style>
-    
 </head>
 <body>
     <main id="ads-page">   
@@ -144,17 +72,8 @@
                     <div class="" style="margin-top:0px;margin-bottom:15px;">
                         
                         <div class="" style="width:90%">
-                            <?php 
-                                    $identity = Zend_Auth::getInstance()->getIdentity();
-                                    if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
-                            ?>
-                            <h3>Please consider to become a <a href="/support" target="_TOP">supporter</a> to help the site grow.</h3>
-                            <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-                                <h3>Thank you for your support!</h3>
-                            <?php   }?>
-                            <br/><br/>
                             <?php
-                            if ($_SERVER['REQUEST_METHOD'] == 'POST') { 
+                            if ($_SERVER['REQUEST_METHOD'] == 'POST' || (null != $identity && $this->isSupporter($identity->member_id))) { 
                                 echo '<a href="'.$this->url.'">Please click here</a>';
                                 echo '<script>document.location.href = "'.$this->url.'";</script>';
                             } else {
@@ -180,7 +99,15 @@
                             }
                              ?>
                              
-                            </form>   
+                            </form>  
+                            <?php 
+                                    $identity = Zend_Auth::getInstance()->getIdentity();
+                                    if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
+                            ?>
+                            <h3>Please consider to become a <a href="/support" target="_TOP">supporter</a> to help the site grow.</h3>
+                            <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
+                                <h3>Thank you for your support!</h3>
+                            <?php   }?>
                         </div>  
                     </div>
                 </div>
