exlore content mobile css adjustment

--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -37,11 +37,36 @@ if($this->inputFilterOriginal ==1)
 }
 
 ?>
+
+<style>
+@media (max-width:610px){
+  #explore-content .GridFlex .content {
+    padding-right: 0;
+    min-width: 100%;
+  }
+
+  #explore-content .GridFlex .sidebar-left {
+    flex: none !important;
+    width: 100%;
+  }
+
+  #explore-content .GridFlex .content .explore-products {
+    padding: 0 !important;
+  }
+
+  #explore-content .GridFlex .sidebar-right {
+    flex: none !important;
+    width: 100%;
+    padding: 0;    
+  }
+}
+</style>
+
 <main id="explore-content">
     <section class="wrapper" id="products-wrapper">
     <span class="glyphicon  togglesidebar" id="btnTogglesidebar" ></span>
     <div class="GridFlex">
-      <div class="GridFlex-cell sidebar-left" >          
+      <div class="GridFlex-cell sidebar-left" >
           <?php  $time_start = microtime(true);echo $this->render('explore/partials/filter.phtml'); $time_elapsed = microtime(true) - $time_start; ?>
           <?php if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {
              echo '<div class="alert alert-warning" role="alert"><strong>Rendering Time: </strong>'.$time_elapsed.' s</div>';
@@ -51,7 +76,7 @@ if($this->inputFilterOriginal ==1)
         <section class="explore-products" id="explore-products">
 
             <div class="pling-nav-tabs">
-              <ul class="nav nav-tabs pling-nav-tabs" id="sort">               
+              <ul class="nav nav-tabs pling-nav-tabs" id="sort">
                   <li  <?=$this->filters['order'] == 'latest' ? 'class="active"' :'' ?>>
                       <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
                           'latest') ?>"><span><?= $this->translate('Latest') ?></span></a>
@@ -59,7 +84,7 @@ if($this->inputFilterOriginal ==1)
                   <li <?=$this->filters['order'] == 'top' ? 'class="active"' :'' ?>>
                       <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
                           'top') ?>"><span><?= $this->translate('Top') ?></span></a>
-                  </li>      
+                  </li>
                   <li style="float: right">
                       <input type="checkbox" name="filter_browse_original" value="1" id="filter_browse_original" <?=$checkedOriginal?> >  Original
                   </li>
@@ -67,7 +92,7 @@ if($this->inputFilterOriginal ==1)
             </div>
 
               <div class="product-list">
-                  <?php                
+                  <?php
                   if (count($this->products) == 0) {
                       echo '<div class="empty">No products to show in this category.</div>';
                   } else {
@@ -104,12 +129,12 @@ $time_start = microtime(true);
      }
 ?>
       <div class="GridFlex-cell sidebar-right">
-          <aside  id="explore-sidebar <?=$asidehide?>" >                      
+          <aside  id="explore-sidebar <?=$asidehide?>" >
              <?php
                 echo $this->render('/home/partials/common_rightsidebar.phtml');
             ?>
 
-            <div  class="row sidebar-right-info" >                                           
+            <div  class="row sidebar-right-info" >
               <?php
               if (count($topprods) > 0) {
                   ?>
@@ -125,7 +150,7 @@ $time_start = microtime(true);
                       ?>
                   </div>
               <?php } ?>
-               
+
             </div>
         </aside>
           <?php
@@ -145,9 +170,9 @@ $time_start = microtime(true);
 </main>
 
 <?php $this->inlineScript()->appendScript(
-    '    $(document).ready(function(){          
-            TooltipUser.setup("tooltipuserleft","left");  
-            TooltipUser.setup("tooltipuser","right");         
-            FilterBrowseOriginalFn.setup();     
+    '    $(document).ready(function(){
+            TooltipUser.setup("tooltipuserleft","left");
+            TooltipUser.setup("tooltipuser","right");
+            FilterBrowseOriginalFn.setup();
         });
     ');
